--- a/OnTheMap/Main/Base.lproj/Main.storyboard
+++ b/OnTheMap/Main/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="130" translatesAutoresizingMaskIntoConstraints="NO" id="Fy1-vV-yAV" userLabel="Main Stack View">
-                                <rect key="frame" x="20" y="280.5" width="374" height="335.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="69" translatesAutoresizingMaskIntoConstraints="NO" id="Fy1-vV-yAV" userLabel="Main Stack View">
+                                <rect key="frame" x="20" y="304.5" width="374" height="287"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="p8g-dR-T69">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="62"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="wXO-44-4Te" userLabel="Login Stack View">
-                                        <rect key="frame" x="0.0" y="192" width="374" height="143.5"/>
+                                        <rect key="frame" x="0.0" y="131" width="374" height="156"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBg-nq-Fwk">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
@@ -51,33 +51,37 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account? Sign up!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woG-MU-kyr">
-                                                <rect key="frame" x="0.0" y="123" width="374" height="20.5"/>
-                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't have an account? Sign up!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rXz-Mw-rNZ">
+                                                <rect key="frame" x="0.0" y="123" width="374" height="33"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                            </textView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="p8g-dR-T69" firstAttribute="centerX" secondItem="Fy1-vV-yAV" secondAttribute="centerX" id="Mit-3v-u4e"/>
-                                    <constraint firstItem="wXO-44-4Te" firstAttribute="centerX" secondItem="Fy1-vV-yAV" secondAttribute="centerX" id="zPB-c0-Ixs"/>
+                                    <constraint firstItem="wXO-44-4Te" firstAttribute="centerX" secondItem="Fy1-vV-yAV" secondAttribute="centerX" id="OdD-0R-cpw"/>
+                                    <constraint firstItem="p8g-dR-T69" firstAttribute="centerX" secondItem="Fy1-vV-yAV" secondAttribute="centerX" id="dXb-Zp-nM6"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fy1-vV-yAV" secondAttribute="trailing" constant="20" id="ZJE-d7-tQe"/>
-                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eoT-W0-UTc"/>
-                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ge1-9z-IxV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fy1-vV-yAV" secondAttribute="trailing" constant="20" id="5gf-0s-3KQ"/>
+                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="h4r-JN-zgo"/>
+                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zgU-nc-bER"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="signUpTextView" destination="rXz-Mw-rNZ" id="Mpq-cx-SQ0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
+            <point key="canvasLocation" x="41.25" y="15.845070422535212"/>
         </scene>
     </scenes>
     <resources>
