--- a/OnTheMap/Support/Base.lproj/LaunchScreen.storyboard
+++ b/OnTheMap/Support/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="qVO-jm-6wI">
+                                <rect key="frame" x="87" y="385" width="240" height="126"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qVO-jm-6wI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="DD1-sr-GTM"/>
+                            <constraint firstItem="qVO-jm-6wI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qAw-IG-o13"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="50.625" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="udacity" width="240" height="126"/>
+    </resources>
 </document>
