--- a/OnTheMap/Main/Base.lproj/Main.storyboard
+++ b/OnTheMap/Main/Base.lproj/Main.storyboard
@@ -18,20 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="176" translatesAutoresizingMaskIntoConstraints="NO" id="Fy1-vV-yAV" userLabel="Main Stack View">
-                                <rect key="frame" x="20" y="235.5" width="374" height="425"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="76" translatesAutoresizingMaskIntoConstraints="NO" id="Fy1-vV-yAV" userLabel="Main Stack View">
+                                <rect key="frame" x="20" y="246" width="374" height="294"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="p8g-dR-T69" userLabel="Logo">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="62"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="wXO-44-4Te" userLabel="Login Stack View">
-                                        <rect key="frame" x="0.0" y="238" width="374" height="187"/>
+                                        <rect key="frame" x="0.0" y="138" width="374" height="156"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBg-nq-Fwk">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" textContentType="email"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                                                 <connections>
                                                     <outlet property="delegate" destination="BYZ-38-t0r" id="ZNJ-hP-a7n"/>
                                                 </connections>
@@ -40,7 +40,7 @@
                                                 <rect key="frame" x="0.0" y="41" width="374" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                                 <connections>
                                                     <action selector="logIn:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="zbI-lP-KpN"/>
                                                     <outlet property="delegate" destination="BYZ-38-t0r" id="aeb-7c-b6y"/>
@@ -68,9 +68,6 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                             </textView>
-                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="mhb-gp-F8i">
-                                                <rect key="frame" x="0.0" y="167" width="374" height="20"/>
-                                            </activityIndicatorView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -79,11 +76,16 @@
                                     <constraint firstItem="p8g-dR-T69" firstAttribute="centerX" secondItem="Fy1-vV-yAV" secondAttribute="centerX" id="dXb-Zp-nM6"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="mhb-gp-F8i">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="mhb-gp-F8i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0JY-SB-cWW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fy1-vV-yAV" secondAttribute="trailing" constant="20" id="5gf-0s-3KQ"/>
-                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="h4r-JN-zgo"/>
+                            <constraint firstItem="Fy1-vV-yAV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-55" id="7Bu-6b-cxy"/>
+                            <constraint firstItem="mhb-gp-F8i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xU4-Jv-RVl"/>
                             <constraint firstItem="Fy1-vV-yAV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zgU-nc-bER"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -98,39 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="39.375" y="14.788732394366198"/>
-        </scene>
-        <!--Item 2-->
-        <scene sceneID="aZd-X0-qEX">
-            <objects>
-                <viewController id="QJl-8b-V0o" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="2ll-3k-wRJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="omr-yu-oEB"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="NR3-4h-sk9"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Zq-EN-n34" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1858" y="340"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="Xhf-AR-FEM">
-            <objects>
-                <viewController id="Dog-IG-KqM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="tIK-b8-Nzk">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="cSN-y8-hmn"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="Mbr-xN-cBb"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HsY-yI-j7U" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1858" y="-309"/>
+            <point key="canvasLocation" x="39.130434782608695" y="14.732142857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Exm-F5-cyE">
@@ -142,16 +112,123 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Dog-IG-KqM" kind="relationship" relationship="viewControllers" id="GQ6-6g-Crd"/>
-                        <segue destination="QJl-8b-V0o" kind="relationship" relationship="viewControllers" id="COU-O1-6am"/>
+                        <segue destination="kzq-8I-ATd" kind="relationship" relationship="viewControllers" id="5C6-v9-ovo"/>
+                        <segue destination="3HS-Bp-vWJ" kind="relationship" relationship="viewControllers" id="evl-an-x0y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jNy-gm-9cZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="938" y="15"/>
+            <point key="canvasLocation" x="846" y="15"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Wuj-6C-KEe">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xt8-qu-uIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="kzq-8I-ATd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="icon_mapview-deselected" selectedImage="icon_mapview-selected" id="3ML-iJ-fYs">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="arl-sD-ak9">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3Wg-qZ-fjm" kind="relationship" relationship="rootViewController" id="OE1-co-Rbk"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1614" y="-335"/>
+        </scene>
+        <!--On The Map-->
+        <scene sceneID="mYb-0f-Z8I">
+            <objects>
+                <viewController id="3Wg-qZ-fjm" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TMP-1S-Mk0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Ac8-yX-O6N"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="On The Map" id="QAh-HY-smw">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="Jv2-yw-gV7">
+                            <connections>
+                                <action selector="logOut:" destination="3Wg-qZ-fjm" id="sJl-P3-v7W"/>
+                            </connections>
+                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="CCB-Qy-6RT"/>
+                            <barButtonItem systemItem="refresh" id="j7Y-od-aHg"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RY2-UN-zwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2459" y="-335"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="E4i-27-GA2">
+            <objects>
+                <navigationController id="3HS-Bp-vWJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="icon_listview-deselected" selectedImage="icon_listview-selected" id="bXZ-b5-rQj">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oy5-0t-cMB">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="KIF-rb-EIe" kind="relationship" relationship="rootViewController" id="Vtb-ku-xOn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tBk-Ex-weT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1613" y="399"/>
+        </scene>
+        <!--On The Map-->
+        <scene sceneID="c5X-52-llI">
+            <objects>
+                <tableViewController id="KIF-rb-EIe" customClass="TableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="US9-dD-ZYz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="lrc-Su-yG7">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lrc-Su-yG7" id="QRg-zU-Zjk">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KIF-rb-EIe" id="hmE-sk-sE0"/>
+                            <outlet property="delegate" destination="KIF-rb-EIe" id="Yf2-04-sJn"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="On The Map" id="IR6-K2-uoS">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="xWb-Bh-AQF">
+                            <connections>
+                                <action selector="logOut:" destination="KIF-rb-EIe" id="t5a-3e-5fG"/>
+                            </connections>
+                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="6Fy-IQ-SdM"/>
+                            <barButtonItem systemItem="refresh" id="dug-Tk-wUx"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QmG-dc-FxV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2458" y="398"/>
         </scene>
     </scenes>
     <resources>
+        <image name="icon_listview-deselected" width="75" height="50"/>
+        <image name="icon_listview-selected" width="75" height="50"/>
+        <image name="icon_mapview-deselected" width="75" height="50"/>
+        <image name="icon_mapview-selected" width="75" height="50"/>
         <image name="logo-u" width="62" height="62"/>
     </resources>
 </document>
